# photo-organizer-poc

./: .gitignore  CHANGELOG.md  CLAUDE.md  detectors.py  gui.py  main.py  organizer.py  package-lock.json  package.json  requirements.txt
.claude/: settings.local.json
docs/: CHANGELOG.md  MIGRATION_PLAN.md  PLAN.md
legacy/: gui.py
python-backend/: organizer.py  requirements.txt  sidecar.py
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/cull/: CullTab.tsx  PhotoCell.tsx
src/components/edit/: EditFilmstrip.tsx  EditLeftPanel.tsx  EditRightPanel.tsx  EditTab.tsx  EditTopBar.tsx  RatingStars.tsx
src/components/edit/panel/: CalibrationSection.tsx  ColorProfileSection.tsx  CurvesSection.tsx  DetailSection.tsx  EditSlider.tsx  HslSection.tsx  LightSection.tsx  PanelSection.tsx  PhotoInfoSection.tsx  PresenceSection.tsx  WhiteBalanceSection.tsx
src/components/home/: HomeScreen.tsx
src/components/import/: ImportTab.tsx
src/components/layout/: Sidebar.tsx  StatusBar.tsx  TabBar.tsx
src/hooks/: useScan.ts  useSidecar.ts  useThumbnails.ts
src/lib/: constants.ts  sidecar.ts
src/types/: photo.ts
