[package]
name = "photo-organizer"
version = "0.1.0"
description = "Photo Organizer — Scan, classify, and review photos"
authors = ["you"]
edition = "2021"

[lib]
name = "photo_organizer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

